hphp/test/slow/record-parent-missing.php.expectf
int(10)
int(42)

Fatal error: unknown record I in %s/record-child.inc on line 3
